@@ -2456,3 +2456,11 @@ FORMULA_MAXITEMS=(2 * @x1) + (2 * @x3) + (2 * @x2)
 # @x1=mobs current char level,   @x2=the current adjusted charisma 
 # @x3=the mob base charisma, @x4=the mobs maximum trainable charisma
 FORMULA_MAXFOLLOW=1 + ( ( @x2 - 6.0 ) / 3.0)
+
+# FORMULA_PROFGAIN is the percent chance 0-100 that a player
+# will gain a point of proficiency when using a skill, assuming 
+# they are not capped by their intelligence already.
+#
+# @x1=max/last player level,   @x2=char's skill qualifying level 
+# @x3=not fatigues(0), or fatigued(1)
+FORMULA_PROFGAIN=(100 - (@x3 * 50)) * ( (@x1 + 1 - @x2) / ( (@x1 * 2) + (10 * @x2) ) )
