@@ -2014,6 +2014,7 @@ to bless you then, or who has Remove Curse.
 
 COVER_DEFENSE=COVER_DEFENCE
 
+TALK=COMMUNICATION
 COMMUNICATION=How do you talk to people?  Gosh!  The channels are a good place to \
 start, like GOSSIP, or you can use the TELL command, or SAY if they are in the same \
 room.  You can mail someone a letter at the post office, or use the EMAIL command.
