@@ -898,6 +898,12 @@
 			</TD><TD WIDTH=45% VALIGN=TOP>
 				<FONT COLOR=WHITE>@INIValue?MASK=NEWACODES&INIHELP@</FONT>
 		</TD></TR>
+        <TR><TD WIDTH=20% VALIGN=TOP><FONT COLOR=WHITE>PROF FORMULA</FONT></TD>
+        <TD WIDTH=80% COLSPAN=2 VALIGN=TOP>
+        <TEXTAREA NAME=FORMULA_MAXCARRY COLS=60 ROWS=2>@INIValue?MASK=FORMULA_PROFGAIN&VALUE@</TEXTAREA>
+        <BR>
+        <FONT COLOR=WHITE>@INIValue?MASK=FORMULA_PROFGAIN&INIHELP@</FONT>
+        </TD></TR>
 		</TABLE>
 	@endif@
 	@if?CheckReqParm?INIPAGE=CLAN@
